--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TGM Asset Management</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/x-icon" href="https://img1.wsimg.com/blobby/go/a22ff6ff-b0f5-439d-8a6b-56ff146d2d69/favicon/6b2f7ff6-9562-4b34-8c62-115b6d947411.ico">
 </head>
 <body>
     <div class="container">
