--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TGM Asset Management</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="https://img1.wsimg.com/blobby/go/a22ff6ff-b0f5-439d-8a6b-56ff146d2d69/favicon/6b2f7ff6-9562-4b34-8c62-115b6d947411.ico">
+    <link rel="icon" href="https://img1.wsimg.com/blobby/go/a22ff6ff-b0f5-439d-8a6b-56ff146d2d69/favicon/6b2f7ff6-9562-4b34-8c62-115b6d947411.ico">
 </head>
 <body>
-    <div class="container">
-        <img src="https://img1.wsimg.com/isteam/ip/a22ff6ff-b0f5-439d-8a6b-56ff146d2d69/Full%20logo%20(wordmark%20%2B%20icon)%20-%20Transparent%20extr.png" alt="TGM Logo" class="logo">
-        <h1>We acquire and manage high quality assets.</h1>
+    <div class="background"></div>
+    <div class="logo">
+        <img src="https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-logo-icon.png?raw=true" alt="TGM Asset Management Logo">
+    </div>
+    <div class="text">
+        We acquire and manage high-quality assets.
     </div>
 </body>
 </html>
