--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TGM Asset Management</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="https://img1.wsimg.com/blobby/go/a22ff6ff-b0f5-439d-8a6b-56ff146d2d69/favicon/6b2f7ff6-9562-4b34-8c62-115b6d947411.ico">
+    <link rel="icon" type="image/x-icon" href="https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-logo-icon.png?raw=true">
 </head>
 <body>
-    <div class="background"></div>
-    <div class="logo">
-        <img src="https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-logo-icon.png?raw=true" alt="TGM Asset Management Logo">
-    </div>
-    <div class="text">
-        We acquire and manage high-quality assets.
+    <div class="container">
+        <div class="logo">
+            <img src="https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-logo-icon.png?raw=true" alt="TGM Logo">
+        </div>
+        <h1 class="headline">
+            We acquire and manage <br> high-quality assets.
+        </h1>
     </div>
 </body>
 </html>
