--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     <link rel="icon" type="image/x-icon" href="https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-logo-icon.png?raw=true">
 </head>
 <body>
-    <div class="container">
-        <div class="logo">
-            <img src="https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-logo-icon.png?raw=true" alt="TGM Logo">
-        </div>
-        <h1 class="headline">
-            We acquire and manage <br> high-quality assets.
-        </h1>
+    <div class="background"></div> <!-- Background image -->
+
+    <div class="logo">
+        <img src="https://github.com/tgmventures/tgmam-site/blob/main/images/tgm-logo-icon.png?raw=true" alt="TGM Logo">
+    </div>
+
+    <div class="text">
+        We acquire and manage <br> high-quality assets.
     </div>
 </body>
 </html>
