--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="text">
-        We acquire and manage <br> high-quality assets.
+        We acquire and manage quality assets.
     </div>
 </body>
 </html>
