--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="text">
-        We manage quality assets.
+        Quality Asset Management.
     </div>
 </body>
 </html>
